# ukweli-ministries

./: .gitignore  .vercelignore  README.md  admin.html  gallery.html  index.html  missions.html
api/: delete.js  gallery.js  latest-videos.js  me.js  save.js  site-images.js  upload-url.js
api/_lib/: auth.js
assets/: auth.js
design/: gallery.dc.html  ukweli-ministries.dc.html
server/: Cargo.toml
server/src/: main.rs
